--- a/src/Components/Usepro.css
+++ b/src/Components/Usepro.css
@@ -3,6 +3,26 @@
     flex-direction: column;
     flex-wrap: wrap;
 }
-.react > .use {
+.react > .Kuensel {
     margin-left: 20px;
+}
+
+.link{
+    display:flex;
+    align-items: center;
+    border: 2px solid rgb(252, 132, 3);
+    margin: 2px;
+}
+
+.link > a {
+    font-family:Playfair Display;
+    font-size:large;
+    font-weight:bold;
+    color: var(--text-primary);
+}
+
+.link > p{
+    margin-left: 4px;
+    font-size:12px;
+
 }
