--- a/src/Components/Work.css
+++ b/src/Components/Work.css
@@ -16,11 +16,16 @@
 }
 .works {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
   
 } 
+
+.works > .info {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
 
  a > img{
     object-fit: contain;
@@ -32,3 +37,10 @@
 a > img:hover{
     box-shadow: 0 1px 15px var(--text-primary),0 1px 2px var(--paradiv);
 }
+
+@media screen and (max-width: 767px) {
+    .works {
+        grid-template-columns: 1fr;
+    } 
+    
+  }
