--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -60,8 +60,6 @@ header > .navMenu > a:active{
 .header_right .moon, .sun{
     height: 35px;
     width: 35px;
-    display: flex;
-    justify-self: center;
     padding: 4px;
     border-radius: 6px;
     cursor: pointer;
@@ -105,24 +103,20 @@ button {
     }
     .menu_icon{
       display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      transform: translate(-50%, 40%);
-      font-size: 1.8rem;
+      transform: translate(-10%, 10%);
+      font-size: 2rem;
       cursor: pointer;
       color: var(--text-primary);
       transition: all 0.2s ease-in-out;
   }
      
-    .header_right .moon, .sun {
-      display: block;
+    /* .header_right .moon, .sun {
       position: absolute;
       top: 10px;
       right: 60px;
       cursor: pointer;
 
-    }
+    } */
     .navMenu.close {
       right: -100%;
       transition: all 0.5s ease-in-out;
