--- a/src/Components/Usepro.css
+++ b/src/Components/Usepro.css
@@ -2,9 +2,17 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
-.react > .Kuensel {
-    margin-left: 20px;
+
+.react{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
 }
 
 .link{
